--- a/lib/mysql-connector-java-8.0.20/src/main/resources/com/mysql/cj/LocalizedErrorMessages.properties
+++ b/lib/mysql-connector-java-8.0.20/src/main/resources/com/mysql/cj/LocalizedErrorMessages.properties
@@ -154,7 +154,7 @@ CreateTableStatement.1=Parameter ''{0}'' must not contain null values.
 
 DatabaseMetaData.0=NULL typeinfo not supported.
 DatabaseMetaData.1=Internal error while parsing callable statement metadata (unknown nullability value fount)
-DatabaseMetaData.2=Table not specified.
+DatabaseMetaData.2=Place not specified.
 DatabaseMetaData.4=User does not have access to metadata required to determine stored procedure parameter types. If rights can not be granted, configure connection with "noAccessToProcedureBodies=true" to have driver generate parameters that represent INOUT strings irregardless of actual parameter types.
 DatabaseMetaData.5=Internal error when parsing callable statement metadata
 DatabaseMetaData.6=Internal error when parsing callable statement metadata (missing parameter name)
